src/objects/Log__e.object
<CustomObject>
    <description>Log information</description>
    <fields>
        <fullName>DebugLevel__c</fullName>
        <description>Debug level (debug, error, warning, info)</description>
        <label>DebugLevel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LogCode__c</fullName>
        <description>Log Code -- application specific</description>
        <label>LogCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <description>Message</description>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>Source</description>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <description>User name</description>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Log</label>
    <pluralLabel>Logs</pluralLabel>
</CustomObject>